# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-4e1dd5f5
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-4e1dd5f5
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      requires-package-does-not-exist-59b602d1
      requires-exact-version-does-not-exist-b669f1bd
      requires-greater-version-does-not-exist-131bb166
      requires-less-version-does-not-exist-8a97d57f
      transitive-requires-package-does-not-exist-4fb623d5
      example-4e1dd5f5
      excluded-only-version-6ccf4dcb
      excluded-only-compatible-version-efdc998d
      dependency-excludes-range-of-compatible-versions-09c4bb3a
      dependency-excludes-non-contiguous-range-of-compatible-versions-b844d640
      extra-required-1cb4bc58
      missing-extra-38288d21
      multiple-extras-required-5e665482
      extra-incompatible-with-extra-aed30d57
      extra-incompatible-with-extra-not-requested-a79dc56c
      extra-incompatible-with-root-aceb2c7f
      extra-does-not-exist-backtrack-86676f88
      direct-incompatible-versions-55cc4ef6
      transitive-incompatible-with-root-version-877a9556
      transitive-incompatible-with-transitive-1b2fe1a4
      package-only-prereleases-5242f6f2
      package-only-prereleases-in-range-e930d467
      requires-package-only-prereleases-in-range-global-opt-in-ebc4dbde
      requires-package-prerelease-and-final-any-ba9ac285
      package-prerelease-specified-only-final-available-858741d0
      package-prerelease-specified-only-prerelease-available-e20f232e
      package-prerelease-specified-mixed-available-f4731006
      package-multiple-prereleases-kinds-f1ac9637
      package-multiple-prereleases-numbers-dd14a9a9
      transitive-package-only-prereleases-98ba7c0a
      transitive-package-only-prereleases-in-range-bf7c6cd6
      transitive-package-only-prereleases-in-range-opt-in-d4ce77eb
      transitive-prerelease-and-stable-dependency-154e5106
      transitive-prerelease-and-stable-dependency-opt-in-0dafb526
      transitive-prerelease-and-stable-dependency-many-versions-5500cb63
      transitive-prerelease-and-stable-dependency-many-versions-holes-085aec8c
      requires-python-version-does-not-exist-1d794d6f
      requires-python-version-less-than-current-720aae3a
      requires-python-version-greater-than-current-d42e8e13
      requires-python-version-greater-than-current-patch-02015be3
      requires-python-version-greater-than-current-many-de00a3ad
      requires-python-version-greater-than-current-backtrack-57765d8d
      requires-python-version-greater-than-current-excluded-2b1e1fd5
      requires-incompatible-python-version-compatible-override-df9d2d06
      requires-compatible-python-version-incompatible-override-ad14da8a
      requires-incompatible-python-version-compatible-override-no-wheels-8efa8294
      requires-incompatible-python-version-compatible-override-no-wheels-available-system-6b12f58c
      requires-incompatible-python-version-compatible-override-no-compatible-wheels-27672836
      requires-incompatible-python-version-compatible-override-other-wheel-6413f0ea
      requires-python-patch-version-override-no-patch-6e610048
      requires-python-patch-version-override-patch-compatible-070b52ec
      specific-tag-and-default-5b682e2a
      only-wheels-98862763
      no-wheels-2d607b8c
      no-wheels-with-matching-platform-4767b9e9
      no-wheels-no-build-d5567080
      only-wheels-no-binary-3850ba71
      no-build-e0451b4c
      no-binary-5036ee47
      package-only-yanked-f1dc9083
      package-only-yanked-in-range-c41e8442
      requires-package-yanked-and-final-any-e055b322
      package-yanked-specified-mixed-available-662d9d10
      transitive-package-only-yanked-3d5f021c
      transitive-package-only-yanked-in-range-03f5a281
      transitive-package-only-yanked-in-range-opt-in-c53d8db6
      transitive-yanked-and-unyanked-dependency-9f2cab62
      transitive-yanked-and-unyanked-dependency-opt-in-2764a77f
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist-59b602d1
          requires-exact-version-does-not-exist-b669f1bd
          requires-greater-version-does-not-exist-131bb166
          requires-less-version-does-not-exist-8a97d57f
          transitive-requires-package-does-not-exist-4fb623d5
      scenarios/example.json
          example-4e1dd5f5
      scenarios/excluded.json
          excluded-only-version-6ccf4dcb
          excluded-only-compatible-version-efdc998d
          dependency-excludes-range-of-compatible-versions-09c4bb3a
          dependency-excludes-non-contiguous-range-of-compatible-versions-b844d640
      scenarios/extras.json
          extra-required-1cb4bc58
          missing-extra-38288d21
          multiple-extras-required-5e665482
          extra-incompatible-with-extra-aed30d57
          extra-incompatible-with-extra-not-requested-a79dc56c
          extra-incompatible-with-root-aceb2c7f
          extra-does-not-exist-backtrack-86676f88
      scenarios/incompatible-versions.json
          direct-incompatible-versions-55cc4ef6
          transitive-incompatible-with-root-version-877a9556
          transitive-incompatible-with-transitive-1b2fe1a4
      scenarios/prereleases.json
          package-only-prereleases-5242f6f2
          package-only-prereleases-in-range-e930d467
          requires-package-only-prereleases-in-range-global-opt-in-ebc4dbde
          requires-package-prerelease-and-final-any-ba9ac285
          package-prerelease-specified-only-final-available-858741d0
          package-prerelease-specified-only-prerelease-available-e20f232e
          package-prerelease-specified-mixed-available-f4731006
          package-multiple-prereleases-kinds-f1ac9637
          package-multiple-prereleases-numbers-dd14a9a9
          transitive-package-only-prereleases-98ba7c0a
          transitive-package-only-prereleases-in-range-bf7c6cd6
          transitive-package-only-prereleases-in-range-opt-in-d4ce77eb
          transitive-prerelease-and-stable-dependency-154e5106
          transitive-prerelease-and-stable-dependency-opt-in-0dafb526
          transitive-prerelease-and-stable-dependency-many-versions-5500cb63
          transitive-prerelease-and-stable-dependency-many-versions-holes-085aec8c
      scenarios/requires-python.json
          requires-python-version-does-not-exist-1d794d6f
          requires-python-version-less-than-current-720aae3a
          requires-python-version-greater-than-current-d42e8e13
          requires-python-version-greater-than-current-patch-02015be3
          requires-python-version-greater-than-current-many-de00a3ad
          requires-python-version-greater-than-current-backtrack-57765d8d
          requires-python-version-greater-than-current-excluded-2b1e1fd5
          requires-incompatible-python-version-compatible-override-df9d2d06
          requires-compatible-python-version-incompatible-override-ad14da8a
          requires-incompatible-python-version-compatible-override-no-wheels-8efa8294
          requires-incompatible-python-version-compatible-override-no-wheels-available-system-6b12f58c
          requires-incompatible-python-version-compatible-override-no-compatible-wheels-27672836
          requires-incompatible-python-version-compatible-override-other-wheel-6413f0ea
          requires-python-patch-version-override-no-patch-6e610048
          requires-python-patch-version-override-patch-compatible-070b52ec
      scenarios/wheels.json
          specific-tag-and-default-5b682e2a
          only-wheels-98862763
          no-wheels-2d607b8c
          no-wheels-with-matching-platform-4767b9e9
          no-wheels-no-build-d5567080
          only-wheels-no-binary-3850ba71
          no-build-e0451b4c
          no-binary-5036ee47
      scenarios/yanked.json
          package-only-yanked-f1dc9083
          package-only-yanked-in-range-c41e8442
          requires-package-yanked-and-final-any-e055b322
          package-yanked-specified-mixed-available-662d9d10
          transitive-package-only-yanked-3d5f021c
          transitive-package-only-yanked-in-range-03f5a281
          transitive-package-only-yanked-in-range-opt-in-c53d8db6
          transitive-yanked-and-unyanked-dependency-9f2cab62
          transitive-yanked-and-unyanked-dependency-opt-in-2764a77f
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/example.json
          example
      scenarios/excluded.json
          excluded-only-version
          excluded-only-compatible-version
          dependency-excludes-range-of-compatible-versions
          dependency-excludes-non-contiguous-range-of-compatible-versions
      scenarios/extras.json
          extra-required
          missing-extra
          multiple-extras-required
          extra-incompatible-with-extra
          extra-incompatible-with-extra-not-requested
          extra-incompatible-with-root
          extra-does-not-exist-backtrack
      scenarios/incompatible-versions.json
          direct-incompatible-versions
          transitive-incompatible-with-root-version
          transitive-incompatible-with-transitive
      scenarios/prereleases.json
          package-only-prereleases
          package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          package-prerelease-specified-only-final-available
          package-prerelease-specified-only-prerelease-available
          package-prerelease-specified-mixed-available
          package-multiple-prereleases-kinds
          package-multiple-prereleases-numbers
          transitive-package-only-prereleases
          transitive-package-only-prereleases-in-range
          transitive-package-only-prereleases-in-range-opt-in
          transitive-prerelease-and-stable-dependency
          transitive-prerelease-and-stable-dependency-opt-in
          transitive-prerelease-and-stable-dependency-many-versions
          transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-patch
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
          requires-incompatible-python-version-compatible-override
          requires-compatible-python-version-incompatible-override
          requires-incompatible-python-version-compatible-override-no-wheels
          requires-incompatible-python-version-compatible-override-no-wheels-available-system
          requires-incompatible-python-version-compatible-override-no-compatible-wheels
          requires-incompatible-python-version-compatible-override-other-wheel
          requires-python-patch-version-override-no-patch
          requires-python-patch-version-override-patch-compatible
      scenarios/wheels.json
          specific-tag-and-default
          only-wheels
          no-wheels
          no-wheels-with-matching-platform
          no-wheels-no-build
          only-wheels-no-binary
          no-build
          no-binary
      scenarios/yanked.json
          package-only-yanked
          package-only-yanked-in-range
          requires-package-yanked-and-final-any
          package-yanked-specified-mixed-available
          transitive-package-only-yanked
          transitive-package-only-yanked-in-range
          transitive-package-only-yanked-in-range-opt-in
          transitive-yanked-and-unyanked-dependency
          transitive-yanked-and-unyanked-dependency-opt-in
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          59b602d1
          b669f1bd
          131bb166
          8a97d57f
          4fb623d5
      scenarios/example.json
          4e1dd5f5
      scenarios/excluded.json
          6ccf4dcb
          efdc998d
          09c4bb3a
          b844d640
      scenarios/extras.json
          1cb4bc58
          38288d21
          5e665482
          aed30d57
          a79dc56c
          aceb2c7f
          86676f88
      scenarios/incompatible-versions.json
          55cc4ef6
          877a9556
          1b2fe1a4
      scenarios/prereleases.json
          5242f6f2
          e930d467
          ebc4dbde
          ba9ac285
          858741d0
          e20f232e
          f4731006
          f1ac9637
          dd14a9a9
          98ba7c0a
          bf7c6cd6
          d4ce77eb
          154e5106
          0dafb526
          5500cb63
          085aec8c
      scenarios/requires-python.json
          1d794d6f
          720aae3a
          d42e8e13
          02015be3
          de00a3ad
          57765d8d
          2b1e1fd5
          df9d2d06
          ad14da8a
          8efa8294
          6b12f58c
          27672836
          6413f0ea
          6e610048
          070b52ec
      scenarios/wheels.json
          5b682e2a
          98862763
          2d607b8c
          4767b9e9
          d5567080
          3850ba71
          e0451b4c
          5036ee47
      scenarios/yanked.json
          f1dc9083
          c41e8442
          e055b322
          662d9d10
          3d5f021c
          03f5a281
          c53d8db6
          9f2cab62
          2764a77f
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
